# rust-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md  calculator_history.txt  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: calculator_benchmark.rs
src/: gui.rs  lib.rs  main.rs
tests/: calculator_tests.rs  property_tests.proptest-regressions  property_tests.rs
